<resources>
    <string name="app_name">Lab03_20230420</string>
    <!-- MainActivity -->
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="ir_contador">Ir al Contador</string>
    <string name="comprobar_conexion">Comprobar Conexión</string>
    <string name="buscador_titulo">Buscador de películas</string>
    <string name="hint_id_pelicula">idPelícula (IMDb)</string>
    <string name="buscar">Buscar</string>

    <!-- ContadorActivity -->
    <string name="titulo_contador">Contador</string>
    <string name="valor_actual">Valor actual</string>
    <string name="valor_cero">0</string>
    <string name="rango_cuenta">(cuenta del 1 al 20)</string>
    <string name="regresar">Regresar</string>
    <string name="iniciar_contador">Iniciar contador</string>

    <!-- DetallePeliculaActivity -->
    <string name="titulo_detalle">Detalle de película</string>
    <string name="label_titulo">Título:</string>
    <string name="label_anio">Año:</string>

    <!-- Dialogs -->
    <string name="ok">Sí</string>
    <string name="cancel">No</string>

</resources>