<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_app">

    <TextView
        android:id="@+id/tvHeaderContador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_contador"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/fondo_crema"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderContador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_actual"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/tvNumeroContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_cero"
            android:textSize="80sp"
            android:textStyle="bold"
            android:textColor="#373737"
            android:layout_marginVertical="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rango_cuenta"
            android:layout_marginBottom="48dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/regresar"
            android:textAllCaps="false"
            app:backgroundTint="@color/rojo_app"
            app:cornerRadius="30dp"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciarContador"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/iniciar_contador"
            android:textAllCaps="false"
            app:backgroundTint="@color/azul_oscuro"
            app:cornerRadius="30dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>