<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_app">

    <TextView
        android:id="@+id/tvHeaderDetalle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_detalle"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/fondo_crema"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderDetalle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_titulo"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/tvTituloPelicula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#333333"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_anio"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/tvAnioPelicula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#333333"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegresarDetalle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/regresar"
            android:textAllCaps="false"
            app:backgroundTint="@color/rojo_app"
            app:cornerRadius="30dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>